--- a/blog-styles.css
+++ b/blog-styles.css
@@ -6,6 +6,7 @@ html {
 body {
     width: 100%;
     height: 100%;
+    margin-bottom: 65px; /* for footer */
     font-family: 'Heebo', sans-serif;
     overflow-x: hidden;
     
@@ -68,15 +69,31 @@ body {
     box-shadow: 0px 3px 10px 2px rgba(0,0,0,0.75);
 }
 
+/* body paragraph style */
+#contactme {
+    color: white;
+    text-align: center;
+    font-size: 18px;
+    padding-left: 180px;
+    padding-right: 180px;
+    text-shadow: 0.5px 0.5px #000;
+    margin-bottom: 20px;
+}
+
+#contactme a {
+    color: white;
+    text-decoration: none;
+}
+
 /* Footer */
 #footer {
+    height: 65px;
     text-align: center;
     background-color: #37474F;
     color: white;
     padding-left: 100px;
     padding-right: 100px;
     position: absolute;
-    left: 0;
     bottom: 0;
     width: 100%;
 }
@@ -124,6 +141,11 @@ body {
     }
     
     #contact {
+        padding-left: 50px;
+        padding-right: 50px;
+    }
+    
+    #contactme {
         padding-left: 50px;
         padding-right: 50px;
     }
