--- a/styles2.css
+++ b/styles2.css
@@ -10,9 +10,10 @@ body {
     font-family: 'Heebo', sans-serif;
     overflow-x: hidden;
     
-    background-color: #43cea2;
-    background: -webkit-linear-gradient(to right, #185a9d, #43cea2);
-    background: linear-gradient(to right, #185a9d, #43cea2);
+    /* https://uigradients.com/#EndlessRiver */
+    background: #7474BF;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #348AC7, #7474BF);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #348AC7, #7474BF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .row {
@@ -26,8 +27,8 @@ body {
     width: 100%;
     height: 70px;
     
-    padding-left: 150px;
-    padding-right: 150px;
+    padding-left: 250px;
+    padding-right: 250px;
 }
 
 #navbar p {
