--- a/styles.css
+++ b/styles.css
@@ -137,6 +137,10 @@ body {
     margin-right: 20px;
 }
 
+.image-wrap-2 {
+    width: 50%;
+}
+
 .image-wrap-1 {
     width: 50%;
     margin-top: 20px;
